<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">MeetMe</string>
    <string name="action_settings">Settings</string>
    <string name="meetmeUrl">www.meetme.com</string>
    <string name="meetmeLogoDescription">MeetMe Logo</string>

    <!-- Options Menu -->
    <string name="logOutMenuAction">Log out</string>

    <!-- Main activity -->
    <string name="tabMeetings">Meetings</string>
    <string name="tabNotifications">Notifications</string>
    <string name="tabFindFriends">Find Friends</string>

    <!-- Registration activity -->
    <string name="emailLabel">Email :</string>
    <string name="firstnameLabel">Firstname :</string>
    <string name="lastnameLabel">Lastname :</string>
    <string name="repeatPasswordLabel">Repeat password :</string>
    <string name="emailHint">Email</string>
    <string name="firstnameHint">Firstname</string>
    <string name="lastnameHint">Lastname</string>
    <string name="repeatPasswordHint">Password</string>
    <string name="registrationButton">Register</string>
    <string name="alreadyHaveAnAccountLink">Already have an account ? <u>Log In</u>!</string>

    <!-- Login activity -->
    <string name="loginLabel">Login :</string>
    <string name="passwordLabel">Password :</string>
    <string name="loginHint">Login</string>
    <string name="passwordHint">Password</string>
    <string name="rememberCheckBox">Stay connected</string>
    <string name="loginButton">Log In</string>
    <string name="newToMeetMeLink">New to MeetMe ? <u>Sign Up</u>!</string>

    <!-- Meetings activity -->
    <string name="noMeetingText">No meetings</string>
    <string name="newMeetingButton">New Meeting</string>
    <string name="findFriendsButton">Find friends</string>
    
    <!-- New meeting steps -->
    <string name="newMeetingStep1on3">New Meeting - Step 1/3</string>
    <string name="newMeetingStep2on3">New Meeting - Step 2/3</string>
    <string name="newMeetingStep3on3">New Meeting - Step 3/3</string>
    
    <!-- New meeting activity -->
    <string name="titleLabel">Title :</string>
    <string name="descriptionLabel">Description :</string>
    <string name="dateTimeLabel">Date and time :</string>
    <string name="locationLabel">Location :</string>
    <string name="titleHint">Title</string>
    <string name="descriptionHint">Description</string>
    <string name="dateTimeHint">Date and time</string>
    <string name="locationHint">Location</string>
    <string name="pickLocationButton">Pick a location</string>
    <string name="dateTimeChooseButton">Pick a date</string>

    <!-- Pick Location activity -->
    <string name="findLocationButton">Find</string>
    <string name="findLocationHint">Location</string>
    <string name="findLocationButtonDescription">Search location button</string>

    <!-- Invite Friends activity -->
    <string name="searchFriend">Search friends&#8230;</string>
    <string name="noFriendText">No friends</string>
    <string name="inviteButton">Invite</string>

    <!-- Find friend activity -->
    <string name="findButton">Find</string>
    <string name="addFriendButton">Send an invitation</string>
    <string name="friendInvitationSent">Friend request sent.</string>

    <!-- Meeting info activity -->
    <string name="meetingHostLabel">Created by</string>
    <string name="goingLabel">Going</string>
    <string name="maybeLabel">Maybe</string>
    <string name="invitedLabel">Invited</string>
    <string name="declinedLabel">Declined</string>
    <string name="seeLiveButton">See live</string>
    <string name="noDescription">No description.</string>

    <!-- Meeting activity -->
    <string name="walking">Walking</string>
    <string name="bicycling">Bicycling</string>
    <string name="driving">Driving</string>
    <string name="arrivedLabel">Arrived</string>
    <string name="leftLabel">Left</string>
    <string name="waitingLabel">Waiting</string>
    <string name="seeMapButton">See the map</string>
    <string name="myStatusButtonLeave">I\'m leaving</string>
    <string name="myStatusButtonArrive">I arrived</string>
    <string name="myStatusLabel">Your status :</string>
    <string name="myStatusNotLeftYet">You didn\'t leave yet.</string>
    <string name="myStatusArrived">You arrived.</string>
    <string name="userIsLate">Late</string>
    <string name="userIsInTime">In time</string>

    <!-- Notifications activity -->
    <string name="pickNotificationTypeSpinnerPrompt">Choose notifications</string>

    <string-array name="pickNotificationTypeSpinnerArray">
        <item>Friend requests</item>
        <item>Invitations</item>
    </string-array>

    <string name="noFriendNotificationText">No friend request</string>
    <string name="noMeetingNotificationText">No invitation</string>
    <string name="meetingInviteNotificationDescription">Meeting invite notification icon</string>
    <string name="friendInviteNotificationDescription">Friend invite notification icon</string>
    <string name="friendInviteNoticationText">would like to be your friend.</string>
    <string name="notificationRefreshButtonDescription">Refresh notifications button</string>
    <string name="refreshingNotifications">Refreshing notifications&#8230;</string>
    
    <!-- Dialog boxes -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="maybe">Maybe</string>
    <string name="sending">Sending&#8230;</string>
    <string name="pleaseWait">Please wait&#8230;</string>
    <string name="loggingIn">Logging in&#8230;</string>
    <string name="loggingInSuccessDialogTitle">Log In</string>
    <string name="loggingInSuccessDialogMessage">You are now logged in !</string>
    <string name="registration">Registration&#8230;</string>
    <string name="registrationSuccessDialogTitle">Registration</string>
    <string name="registrationSuccessDialogMessage">Your registration is complete !</string>
    <string name="meetingCreation">Creating meeting</string>
    <string name="meetingCreationSuccessDialogTitle">Meeting creation</string>
    <string name="meetingCreationSuccessDialogMessage">Your meeting has been created !</string>
    <string name="meetingCreationErrorDialogTitle">Error</string>
    <string name="meetingCreationErrorDialogMessage">An error occurred while creating your meeting !</string>
    <string name="dateTimeDialogTitle">Choose a date</string>
    <string name="searchingUser">Searching user&#8230;</string>
    <string name="sendingInvitation">Sending invitation&#8230;</string>
    <string name="confirmLocationDialogTitle">Confirm location ?</string>
    <string name="sendingResponse">Sending response&#8230;</string>
    <string name="confirmFriendRequestDialogTitle">Friend request</string>
    <string name="confirmFriendRequestDialogMessage">would like to be your friend.</string>
    <string name="confirmMeetingInvitationDialogTitle">Meeting invitation</string>
    <string name="confirmMeetingInvitationDialogMessage">would like to invite you in the meeting</string>
    <string name="friendAcceptSuccessDialogTitle">Friend request</string>
    <string name="friendAcceptSuccessDialogMessage">is now in your friend list.</string>
    <string name="meetingAcceptSuccessDialogTitle">Meeting invitation</string>
    <string name="meetingAcceptSuccessDialogMessage">You are now part of the meeting</string>
    <string name="byCar">Car</string>
    <string name="byBicycle">Bicycle</string>
    <string name="byFoot">Foot</string>
    <string name="travelModeDialogTitle">Travel mode</string>
    <string name="travelModeDialogMessage">How are you going to this meeting ?</string>
    <string name="confirmationArrivedDialogTitle">Confirmation</string>
    <string name="confirmationArrivedDialogMessage">Do you confirm you arrived ?</string>
    <string name="gpsIsdisabledDialogMessage">GPS is disabled on your device.\nWould you like to enable it ?</string>
    
    <!-- Error/Warning -->
    <string name="generalError">An error occurred</string>
    <string name="invalidEmail">Email is not valid</string>
    <string name="invalidFirstname">Firstname must contain at least 1 character</string>
    <string name="invalidLastname">Lastname must contain at least 1 character</string>
    <string name="invalidPassword">Password must contain at least 8 characters</string>
    <string name="emailAlreadyExists">Email already exists</string>
    <string name="emptyPassword">Enter your password</string>
    <string name="passwordDoNotMatch">Passwords do not match</string>
    <string name="emptyTitle">Enter a title</string>
    <string name="titleTooLong">Title must not exceed 255 characters</string>
    <string name="wrongEmailFull">The email you entered does not exist</string>
    <string name="wrongEmail">Email does not exist</string>
    <string name="wrongPasswordFull">The password you entered is wrong</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="noFriendFoundForEmail">No user was found for this email</string>
    <string name="friendAlreadyInList">This user is already in your friend list</string>
    <string name="friendIsYourself">You can\'t add yourself as a friend</string>
    <string name="friendInvitationAlreadySent">Invitation already sent</string>
    <string name="emptyLocation">Enter a location</string>
    <string name="invalidDateTime">Date and time are invalid</string>
    <string name="emptyDateTime">Pick a date and time</string>
</resources>
