<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
        
	    <TextView
            android:id="@+id/meetingTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/meeting_title_background"
            />
	    <TextView
	        style="@style/meetingFriendStatusLabel"
	        android:id="@+id/arrivedLabel"
	        android:text="@string/arrivedLabel"
	        />
	    <TextView 
	        style="@style/meetingFriendStatusList"
	        android:id="@+id/arrivedList"
            />
	    <TextView
	        style="@style/meetingFriendStatusLabel"
            android:id="@+id/leftLabel"
            android:text="@string/leftLabel"
            />
	    <TextView 
	        style="@style/meetingFriendStatusList"
            android:id="@+id/leftList"
            />
	    <TextView
	        style="@style/meetingFriendStatusLabel"
            android:id="@+id/waitingLabel"
            android:text="@string/waitingLabel"
            />
	    <TextView 
	        style="@style/meetingFriendStatusList"
            android:id="@+id/waitingList"
            />
	    
	    <TextView
            android:id="@+id/myStatusLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:padding="5sp"
            android:gravity="center"
            android:textSize="16sp"
            android:background="#dddddd"
            android:text="@string/myStatusLabel"
            />
	    <TextView
            android:id="@+id/myStatusText"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="10sp"
            android:gravity="center"
            android:text="@string/myStatusNotLeftYet"
            />
	    <Button
            android:id="@+id/myStatusButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/myStatusButtonLeave"
            />
	    
	    <Button
            android:id="@+id/seeMapButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/seeMapButton"
            />
	</LinearLayout>
</ScrollView>