<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
	
   	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="#ffffff"
        android:focusable="true" 
        android:focusableInTouchMode="true">
 		
		<!--  Header Starts-->
		<LinearLayout android:id="@+id/header"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@layout/header_gradient"
		    android:paddingTop="5dip"
		    android:paddingBottom="5dip">
		        <!-- Logo Start-->
		        <ImageView android:src="@drawable/meetme_logo"
		            android:contentDescription="@string/meetmeLogoDescription"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dip"/>
		        <!-- Logo Ends -->
		</LinearLayout>
		<!--  Header Ends -->
        <!-- Login Form Starts -->
		<LinearLayout
		    android:id="@+id/loginForm" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:paddingTop="15dip"
		    android:layout_below="@id/header" >
		
		    <TextView
		        android:id="@+id/errorText"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:textColor="#ff0000"
			    android:gravity="center"
		        />
		    
			<TextView 
			    android:id="@+id/loginText"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			  	android:text="@string/loginLabel"
			    />
			<EditText 
		        android:id="@+id/loginEdit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
		        android:hint="@string/loginHint"
		        android:inputType="textEmailAddress"
		        />
			<TextView 
			    android:id="@+id/passwordText"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			  	android:text="@string/passwordLabel"
			    />
			<EditText 
		        android:id="@+id/passwordEdit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
		        android:hint="@string/passwordHint"
		        android:inputType="textPassword"
		        />
		 	<Button 
		        android:id="@+id/loginButton"
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginTop="10dip"
		    	android:text="@string/loginButton"
		        />	    
	        <TextView android:id="@+id/newToMeetMeLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/newToMeetMeLink"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#FF9100"/>
		</LinearLayout>
		<!-- Login Form Ends -->
		<!--  Footer Starts -->
        <LinearLayout
			    android:id="@+id/footer"
			    android:layout_width="fill_parent"
			    android:layout_height="match_parent"
			    android:background="@layout/footer_gradient"
			    android:paddingBottom="5dip"
			    android:paddingTop="5dip" 
			    android:layout_below="@id/loginForm"
			    android:orientation="vertical">
			</LinearLayout>
        <!-- Footer Ends -->
	</RelativeLayout>
</ScrollView>