<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MeetingInfoActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	
	    <TextView
	        android:id="@+id/meetingTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10sp"
	        android:textStyle="bold"
	        android:gravity="center"
	        android:textSize="25sp"
	        android:background="@drawable/meeting_title_background"
	        />
	    <TextView
	        android:id="@+id/meetingDateTime"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/clock_icon"
	        android:padding="10sp"
	        android:gravity="center"
	        android:textSize="20sp"
	        />
	    <TextView
	        android:id="@+id/meetingLocation"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/location_icon"
	        android:padding="10sp"
	        android:gravity="center"
	        android:textSize="18sp"
	        />
	    <TextView
	        android:id="@+id/meetingDescription"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5sp"
	        android:gravity="center"
	        android:textSize="16sp"
	        android:background="#dddddd"
	        />
	    <TextView
	        android:id="@+id/meetingHost"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="5sp"
	        android:gravity="center"
	        android:textStyle="italic"
	        android:textSize="16sp"
	        />
	    
	    <TextView
	        style="@style/meetingFriendStatusLabel"
	        android:id="@+id/meetingGoingLabel"
	        android:text="@string/goingLabel"
	        />
	    <TextView
	        style="@style/meetingFriendStatusList"
            android:id="@+id/meetingGoingList"
            />
	    <TextView
	        style="@style/meetingFriendStatusLabel"
	        android:id="@+id/meetingMaybeLabel"
	        android:text="@string/maybeLabel"
	        />
	    <TextView
	        style="@style/meetingFriendStatusList"
            android:id="@+id/meetingMaybeList"
            />
	    <TextView
            style="@style/meetingFriendStatusLabel"
            android:id="@+id/meetingInvitedLabel"
            android:text="@string/invitedLabel"
            />
        <TextView
            style="@style/meetingFriendStatusList"
            android:id="@+id/meetingInvitedList"
            />
	    <TextView
	        style="@style/meetingFriendStatusLabel"
	        android:id="@+id/meetingDeclinedLabel"
	        android:text="@string/declinedLabel"
	        />
	    <TextView
	        style="@style/meetingFriendStatusList"
            android:id="@+id/meetingDeclinedList"
            />
	    <Button
	        android:id="@+id/seeLiveButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/seeLiveButton"
	        />
	</LinearLayout>
</ScrollView>
